[package]
name = "rsconfig"
version = "0.1.2"
edition = "2021"
authors = ["HyperCodec"]
description = "A simple Rust configuration library"
license = "MIT OR Apache-2.0"
keywords = ["config", "configuration"]
categories = ["command-line-utilities", "config", "filesystem"]
exclude = ["/testing/"]
readme = "README.md"
repository = "https://github.com/HyperCodec/rsconfig"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = false

[dependencies]
yaml-rust = "0.4"
serde_json = "1.0"

rsconfig-macros = "0.1.1"